--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -74,8 +74,8 @@ brands:
 #- name: newforexdev3
 #  config_file: newforexdev3.yml
 
-#- name: newcrmui
-#  config_file: newcrmui.yml
+- name: newcrmui
+  config_file: newcrmui.yml
 
 #- name: olympiamarkets
 #  config_file: olympiamarkets.yml
@@ -125,5 +125,5 @@ brands:
 #- name: uprofx
 #  config_file: uprofx.yml
 
-- name: 24option
-  config_file: 24option.yml
+#- name: 24option
+#  config_file: 24option.yml
