--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -45,7 +45,13 @@ tests_config:
 #    - test_registred_client_in_crm_new_ui
 
 ######################################## AFFILIATES MODULE ##########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
-  class: AffiliateModule
-  tests:
-     - test_create_delete_affiliate_ui
+#- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module_ui.Test_Affiliates_Module_UI
+#  class: TestAffiliateModuleUI
+#  tests:
+#     - test_create_delete_affiliate_ui
+
+#################################### CLIENTS ###############################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
+#  class: SearchingClientsTestCRM
+#  tests:
+#    - test_make_searching_client_module
