--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -1,22 +1,28 @@
 tests_config:
 
-################################### CONVERT LEAD ##########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-#  directive: reload_configuration
-#  class: LeadModuleTest
+########################################## LEADS ###################################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.Test_Leads_Module_UI
+#  class: TestLeadsModuleUI
 #  tests:
-#    - test_convert_lead_new_ui   # Creates a lead and converts it to a client
-#
+#    - test_leads_searching_columns_ui
+
+####################################### CONVERT LEAD ##########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  directive: reload_configuration
+  class: LeadModuleTest
+  tests:
+    - test_convert_lead_new_ui   # Creates a lead and converts it to a client
+
 ######################################## MT4 ACTIONS ###########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
 #  class: TradingAccountCrmTest
 #  tests:
 #    - test_crm_open_trading_account_new_ui  # open demo trading account
 #
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
-#  class: DepositTestCRM
-#  tests:
-#    - test_make_deposit_crm_new_ui  # create live mt account and make deposit in crm
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
+  class: DepositTestCRM
+  tests:
+    - test_make_deposit_crm_new_ui  # create live mt account and make deposit in crm
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Withdraw_CRM
 #  class: WithdrawTest
@@ -50,8 +56,8 @@ tests_config:
 #  tests:
 #     - test_create_delete_affiliate_ui
 
-#################################### CLIENTS ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.Test_Clients_Module_UI
-  class: TestClientsModuleUI
-  tests:
-    - test_clients_searching_columns_ui
+############################################## CLIENTS ###############################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.Test_Clients_Module_UI
+#  class: TestClientsModuleUI
+#  tests:
+#    - test_clients_searching_columns_ui
