--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -225,11 +225,11 @@ tests_config:
 #  tests:
 #    - test_create_ticket
 #
-- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_module.Test_Tab_Help_Desk
-  class: TabHelpDeskTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_module.Test_Tab_Help_Desk
+#  class: TabHelpDeskTest
+#  tests:
 #    - test_searching_help_desk
-    - test_check_tab_help_desk
+#    - test_check_tab_help_desk
 
 ############################################# AUDIT LOGS ################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_module.Test_Audit_Logs
@@ -239,8 +239,8 @@ tests_config:
 #    - test_new_events_shown_in_audit_logs
 
 ############################################# GLOBAL SEARCH ################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Global_Search
-#  class: TestGlobalSearch
-#  tests:
-#    - test_global_search_leads
-#    - test_global_search_tasks
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Global_Search
+  class: TestGlobalSearch
+  tests:
+    - test_global_search_leads
+    - test_global_search_tasks
