--- a/src/test/python/resources/config/Brands/trade99.yml
+++ b/src/test/python/resources/config/Brands/trade99.yml
@@ -1,6 +1,6 @@
 pretty_name: "Trade99"
 url: "https://trade99.ptscrm.com/"
-url_ca: "https://www.trade99.com/"
+url_ca: "https://platform.trade99.com/#/"
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
 number_live_acc: "32342"
