--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -62,8 +62,8 @@ brands:
 #- name: marketrip
 #  config_file: marketrip.yml
 
-#- name: moneta
-#  config_file: moneta.yml
+- name: moneta
+  config_file: moneta.yml
 
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
@@ -89,8 +89,8 @@ brands:
 #- name: proconsultinginvest
 #  config_file: proconsultinginvest.yml
 
-- name: ptbanc
-  config_file: ptbanc.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
 
 #- name: q8
 #  config_file: q8.yml
