--- a/src/test/python/resources/config/tests_api.yml
+++ b/src/test/python/resources/config/tests_api.yml
@@ -1,11 +1,11 @@
 tests_config:
 
 ######################################### API TESTS ##############################################
-#- module: src.test.python.ui.automation.implementation.api.Test_API
-#  class: TestAPI
-#  tests:
+- module: src.test.python.ui.automation.implementation.api.Test_API
+  class: TestAPI
+  tests:
 #    - test_autorization_process
-#    - test_create_new_customer
+    - test_create_new_customer
 #    - test_create_duplicate_customer
 #    - test_read_customer_details
 #    - test_update_customer
@@ -13,8 +13,8 @@ tests_config:
 #    - test_read_leads_api
 #    - test_login_token
 
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
-  class: CheckDragonTest
-  tests:
-    - test_api_dragon_valid_phone
-    - test_api_dragon_invalid_phone
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+#  class: CheckDragonTest
+#  tests:
+#    - test_api_dragon_valid_phone
+#    - test_api_dragon_invalid_phone
