--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -74,8 +74,8 @@ brands:
 #- name: newforexdev3
 #  config_file: newforexdev3.yml
 
-#- name: newcrmui
-#  config_file: newcrmui.yml
+- name: newcrmui
+  config_file: newcrmui.yml
 
 #- name: olympiamarkets
 #  config_file: olympiamarkets.yml
@@ -92,8 +92,8 @@ brands:
 #- name: ptbanc
 #  config_file: ptbanc.yml
 
-- name: q8
-  config_file: q8.yml
+#- name: q8
+#  config_file: q8.yml
 
 #- name: solocapitlas
 #  config_file: solocapitlas.yml
