--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -1,39 +1,46 @@
 tests_config:
 
 ########################################## LEADS ###################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.Test_Leads_Module_UI
-  class: TestLeadsModuleUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.Test_Leads_Module_UI
+#  class: TestLeadsModuleUI
+#  tests:
 #    - test_leads_searching_columns_ui
-    - test_mass_assign_leads
+#    - test_mass_assign_leads_ui
+    - test_mass_edit_leads_ui
 
 ####################################### CONVERT LEAD ##########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
-    - test_convert_lead_new_ui   # Creates a lead and converts it to a client
-
-######################################## MT4 ACTIONS ###########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-  class: TradingAccountCrmTest
-  tests:
-    - test_crm_open_trading_account_new_ui  # open demo trading account
-
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.Test_MT4_UI
-  class: TestMT4UI
-  tests:
-    - test_deposit_crm_new_ui  # create live mt account and make deposit in crm
-
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Withdraw_CRM
-  class: WithdrawTest
-  tests:
-    - test_withdraw_crm_new_ui   #preconditions: convert lead, make deposit
-
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
-  class: CreditInTestCRM
-  tests:
-    - test_credit_in_crm_new_ui
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
+#    - test_convert_lead_new_ui   # Creates a lead and converts it to a client
+#
+############################################## CLIENTS ###############################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.Test_Clients_Module_UI
+#  class: TestClientsModuleUI
+#  tests:
+#    - test_clients_searching_columns_ui
+#    - test_mass_assign_clients_ui
+######################################### MT4 ACTIONS ###########################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+#  class: TradingAccountCrmTest
+#  tests:
+#    - test_crm_open_trading_account_new_ui  # open demo trading account
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.Test_MT4_UI
+#  class: TestMT4UI
+#  tests:
+#    - test_deposit_crm_new_ui  # create live mt account and make deposit in crm
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Withdraw_CRM
+#  class: WithdrawTest
+#  tests:
+#    - test_withdraw_crm_new_ui   #preconditions: convert lead, make deposit
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
+#  class: CreditInTestCRM
+#  tests:
+#    - test_credit_in_crm_new_ui
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_Out
 #  class: CreditOutTestCRM
@@ -56,9 +63,3 @@ tests_config:
 #  class: TestAffiliateModuleUI
 #  tests:
 #     - test_create_delete_affiliate_ui
-
-############################################## CLIENTS ###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.Test_Clients_Module_UI
-#  class: TestClientsModuleUI
-#  tests:
-#    - test_clients_searching_columns_ui
