--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -6,7 +6,7 @@ tests_config:
 #  tests:
 #    - test_leads_searching_columns_ui
 #    - test_mass_assign_leads_ui
-    - test_mass_edit_leads_ui
+#    - test_mass_edit_leads_ui
 
 ####################################### CONVERT LEAD ##########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
@@ -21,6 +21,8 @@ tests_config:
 #  tests:
 #    - test_clients_searching_columns_ui
 #    - test_mass_assign_clients_ui
+#    - test_mass_edit_clients_ui
+
 ######################################### MT4 ACTIONS ###########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
 #  class: TradingAccountCrmTest
@@ -52,14 +54,42 @@ tests_config:
 #  tests:
 #    - test_transfer_between_ta_new_ui # preconditions: convert lead, deposit crm
 
-#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-#  class: SignUpTest
-#  tests:
-#    - test_check_sign_up
-#    - test_registred_client_in_crm_new_ui
-
 ######################################## AFFILIATES MODULE ##########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module_ui.Test_Affiliates_Module_UI
 #  class: TestAffiliateModuleUI
 #  tests:
 #     - test_create_delete_affiliate_ui
+
+############################################# CA TESTS ##############################################
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
+    - test_check_sign_up
+    - test_registred_client_in_crm_new_ui
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+  class: AddNewAccountTestCA
+  tests:
+    - test_add_live_account_ca
+    - test_add_demo_account_ca
+    - test_verify_accounts_in_crm_ui
+    - test_switch_between_accounts_ca
+
+#- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
+#  class: TestPagesCA
+#  tests:
+#    - test_main_menu_pages_loading
+#    - test_graphs_loading
+#
+- module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
+  class: TradingProcess
+  tests:
+    - test_trading_process_open_position_ca    # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+    - test_verify_open_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+    - test_trading_process_close_position_ca      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+    - test_verify_close_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+#    - test_open_position_live         # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+#    - test_verify_live_open_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+#    - test_close_position_live      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+#    - test_verify_live_close_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+#
