--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -8,8 +8,8 @@ brands:
 - name: alferatrade
   config_file: alferatrade.yml
 
-- name: any1profit
-  config_file: any1profit.yml
+#- name: any1profit
+#  config_file: any1profit.yml
 
 - name: bfxinternational
   config_file: bfxinternational.yml
