--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -53,8 +53,8 @@ brands:
 - name: q8
   config_file: q8.yml
 
-- name: stox50
-  config_file: stox50.yml
+#- name: stox50
+#  config_file: stox50.yml
 
 - name: strattonmarkets-eu
   config_file: strattonmarkets-eu.yml
