--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -9,11 +9,11 @@ tests_config:
 #    - test_mass_edit_leads_ui
 
 ####################################### CONVERT LEAD ##########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-#  directive: reload_configuration
-#  class: LeadModuleTest
-#  tests:
-#    - test_convert_lead_new_ui   # Creates a lead and converts it to a client
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.Test_Leads_Module_UI
+  directive: reload_configuration
+  class: TestLeadsModuleUI
+  tests:
+    - test_convert_lead_ui   # Creates a lead and converts it to a client
 #
 ############################################## CLIENTS ###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.Test_Clients_Module_UI
@@ -86,10 +86,10 @@ tests_config:
 #    - test_fin_transactions_searching_columns_ui
 
 ############################################## AUDIT LOGS ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_ui.TestAuditLogsModuleUI
-  class: TestAuditLogsModuleUI
-  tests:
-    - test_audit_logs_searching_columns_ui
+#- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_ui.TestAuditLogsModuleUI
+#  class: TestAuditLogsModuleUI
+#  tests:
+#    - test_audit_logs_searching_columns_ui
 
 ############################################## TASKS ################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_ui.TestTasksModuleUI
