--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -27,25 +27,12 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_mt4_ui.TestMT4UI
   class: TestMT4UI
   tests:
-#    - test_create_demo_trading_account_ui
+    - test_create_demo_trading_account_ui
     - test_deposit_crm_ui  # create live mt account and make deposit
     - test_withdraw_crm_ui
     - test_credit_in_crm_ui
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
-#  class: CreditInTestCRM
-#  tests:
-#    - test_credit_in_crm_new_ui
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_Out
-#  class: CreditOutTestCRM
-#  tests:
-#    - test_make_credit_out_crm_new_ui # preconditions: convert lead, make credit in
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Transfer_Between_Ta
-#  class: TransferBetweenTa
-#  tests:
-#    - test_transfer_between_ta_new_ui # preconditions: convert lead, deposit crm
+    - test_credit_out_crm_ui
+    - test_transfer_crm_ui
 
 ######################################## AFFILIATES MODULE ##########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module_ui.Test_Affiliates_Module_UI
