--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -9,11 +9,11 @@ tests_config:
 #    - test_mass_edit_leads_ui
 
 ####################################### CONVERT LEAD ##########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.Test_Leads_Module_UI
-  directive: reload_configuration
-  class: TestLeadsModuleUI
-  tests:
-    - test_convert_lead_ui   # Creates a lead and converts it to a client
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.Test_Leads_Module_UI
+#  directive: reload_configuration
+#  class: TestLeadsModuleUI
+#  tests:
+#    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
 ############################################## CLIENTS ###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.Test_Clients_Module_UI
@@ -24,15 +24,15 @@ tests_config:
 #    - test_mass_edit_clients_ui
 
 ######################################### MT4 ACTIONS ###########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_mt4_ui.TestMT4UI
-  class: TestMT4UI
-  tests:
-    - test_create_demo_trading_account_ui
-    - test_deposit_crm_ui  # create live mt account and make deposit
-    - test_withdraw_crm_ui
-    - test_credit_in_crm_ui
-    - test_credit_out_crm_ui
-    - test_transfer_crm_ui
+#- module: src.test.python.ui.automation.implementation.crm.tests_mt4_ui.TestMT4UI
+#  class: TestMT4UI
+#  tests:
+#    - test_create_demo_trading_account_ui
+#    - test_deposit_crm_ui  # create live mt account and make deposit
+#    - test_withdraw_crm_ui
+#    - test_credit_in_crm_ui
+#    - test_credit_out_crm_ui
+#    - test_transfer_crm_ui
 
 ######################################## AFFILIATES MODULE ##########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module_ui.Test_Affiliates_Module_UI
@@ -79,34 +79,34 @@ tests_config:
 #    - test_add_delete_event_ui
 
 ############################################# CA TESTS ##############################################
-#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-#  class: SignUpTest
-#  tests:
-#    - test_check_sign_up
-#    - test_registred_client_in_crm_new_ui
-#
-#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
-#  class: AddNewAccountTestCA
-#  tests:
-#    - test_add_live_account_ca
-#    - test_add_demo_account_ca
-#    - test_verify_accounts_in_crm_ui
-#    - test_switch_between_accounts_ca
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
+    - test_check_sign_up
+    - test_registred_client_in_crm_new_ui
 
-#- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
-#  class: TestPagesCA
-#  tests:
-#    - test_main_menu_pages_loading
-#    - test_graphs_loading
-#
-#- module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
-#  class: TradingProcess
-#  tests:
-#    - test_trading_process_open_position_ca    # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
-#    - test_verify_open_position_crm_ui     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
-#    - test_trading_process_close_position_ca      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
-#    - test_verify_close_position_crm_ui     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
-#    - test_open_position_live         # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
-#    - test_verify_live_open_position_crm_ui     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
-#    - test_close_position_live      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
-#    - test_verify_live_close_position_crm_ui     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+  class: AddNewAccountTestCA
+  tests:
+    - test_add_live_account_ca
+    - test_add_demo_account_ca
+    - test_verify_accounts_in_crm_ui
+    - test_switch_between_accounts_ca
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
+  class: TestPagesCA
+  tests:
+    - test_main_menu_pages_loading
+    - test_graphs_loading
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
+  class: TradingProcess
+  tests:
+    - test_trading_process_open_position_ca    # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+    - test_verify_open_position_crm_ui     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+    - test_trading_process_close_position_ca      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+    - test_verify_close_position_crm_ui     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+    - test_open_position_live         # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+    - test_verify_live_open_position_crm_ui     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+    - test_close_position_live      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+    - test_verify_live_close_position_crm_ui     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
