--- a/src/test/python/resources/config/tests10.yml
+++ b/src/test/python/resources/config/tests10.yml
@@ -1,11 +1,6 @@
 tests_config:
 
-###################################### MY DASHBOARD TESTS ########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-  class: MyDashboardActionsTest
+- module: src.test.python.ui.automation.implementation.crm.load.TestLoadCRMUI
+  class: TestLoadCRMUI
   tests:
-    - test_edit_event_my_dashboard
-    - test_email_icon
-    - test_sms_icon
-    - test_sorting_columns
-    - test_searching_by_columns
+    - test_load_switch_tabs_ui
