--- a/src/test/python/resources/config/tests2.yml
+++ b/src/test/python/resources/config/tests2.yml
@@ -1,23 +1,18 @@
 tests_config:
 
-########################################### USER_MANAGEMENT #########################################
-- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
-  class: UserManagementTest
-  tests:
-    - test_create_user
-    - test_delete_user
-
 ########################################## LEADS ###################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
+  class: TestLeadsModuleUI
   tests:
-    - test_create_edit_lead
+    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-  class: TabLeadsModuleCRM
+######################################### MT4 ACTIONS ###########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_mt4_ui.TestMT4UI
+  class: TestMT4UI
   tests:
-    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
-    - sorting_lead_module
-    - test_mass_assign_leads
-    - test_mass_edit_leads
+    - test_create_demo_trading_account_ui
+    - test_deposit_crm_ui  # create live mt account and make deposit
+    - test_withdraw_crm_ui
+    - test_credit_in_crm_ui
+    - test_credit_out_crm_ui
+    - test_transfer_crm_ui
