--- a/src/test/python/resources/config/tests4.yml
+++ b/src/test/python/resources/config/tests4.yml
@@ -1,10 +1,38 @@
 tests_config:
 
-######################################### WORKFLOWS MODULE #############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
-  class: WorkflowsModulesTest
+######################################## AFFILIATES MODULE ##########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module_ui.Test_Affiliates_Module_UI
+  class: TestAffiliateModuleUI
   tests:
-    - test_create_workflows
-    - test_check_workflow_by_status
-    - test_check_workflow_by_country
-    - test_delete_workflow
+     - test_create_delete_affiliate_ui
+
+########################################### HELP DESK ##############################################
+- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_ui.TestHelpDeskModuleUI
+  class: TestHelpDeskModuleUI
+  tests:
+    - test_create_delete_ticket_ui
+    - test_help_desk_searching_columns_ui
+
+########################################### DOCUMENTS ##############################################
+- module: src.test.python.ui.automation.implementation.crm.tests_documents_ui.TestDocumentsModuleUI
+  class: TestDocumentsModuleUI
+  tests:
+    - test_documents_searching_columns_ui
+
+######################################## TRADING ACCOUNTS ##########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_trading_ui.TestTradingModuleUI
+  class: TestTradingModuleUI
+  tests:
+    - test_trading_searching_columns_ui
+
+###################################### FINANCIAL TRANSACTIONS ##########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_fin_transactions_ui.TestFinTransactionsModuleUI
+  class: TestFinTransactionsModuleUI
+  tests:
+    - test_fin_transactions_searching_columns_ui
+
+############################################# AUDIT LOGS ################################################
+- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_ui.TestAuditLogsModuleUI
+  class: TestAuditLogsModuleUI
+  tests:
+    - test_audit_logs_searching_columns_ui
