--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -1,12 +1,12 @@
 tests_config:
 
 ######################################### CA TESTS ##############################################
-#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-#  class: SignUpTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
 #    - test_check_sign_up
-#    - test_check_login
-#    - test_client_deposit_page_loading
+    - test_check_login
+    - test_client_deposit_page_loading
 #    - test_check_email_sign_up
 #    - test_registred_client_exist_in_crm
 #
