--- a/src/test/python/resources/config/brands5.yml
+++ b/src/test/python/resources/config/brands5.yml
@@ -2,3 +2,6 @@ brands:
 
 - name: confixfinancial
   config_file: confixfinancial.yml
+
+- name: proconsultinginvest
+  config_file: proconsultinginvest.yml
