--- a/src/main/python/ui/crm/model/BrandsXpath/ptbanc_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/ptbanc_xpath.yml
@@ -10,6 +10,8 @@ CALoginPage:
   next_btn: "//button[contains (text(), 'Next')]"
 CAPage:
   click_close:  "/html/body/panda-forex-client-area/div/div/client-area-popup/div/div[2]/div[1]/a/i"
+CAWithdrawHistoryPage:
+  submit_cancel_button: "//button[text()='yes']"
 ClientsPage:
   client_status_button: "//*[@id='customAdvanceSearch']/td[3]/div/div[1]/button"
   client_status_field: "//*[@id='customAdvanceSearch']/td[3]/div/div[1]/ul/li[1]/div/input"
