--- a/src/test/python/resources/config/Brands/pmt247.yml
+++ b/src/test/python/resources/config/Brands/pmt247.yml
@@ -3,4 +3,4 @@ url: "https://pmt247.ptscrm.com/"
 url_ca: "https://www.pmt247.com/en/home/?lang=en"
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
-number_live_acc: "32342"
+number_live_acc: "81870151"
