--- a/src/test/python/resources/config/Brands/confixfinancial.yml
+++ b/src/test/python/resources/config/Brands/confixfinancial.yml
@@ -3,4 +3,4 @@ url: "https://confixfinancial.ptscrm.com/"
 url_ca: "https://confixfinancial.com/#/"
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
-number_live_acc: "32342"
+number_live_acc: "83212339"
