--- a/src/test/python/resources/config/Brands/bfxinternational.yml
+++ b/src/test/python/resources/config/Brands/bfxinternational.yml
@@ -3,4 +3,4 @@ url: "https://bfxinternational.ptscrm.com/"
 url_ca: "https://www.bfxinternational.com/"
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
-number_live_acc: "32342"
+number_live_acc: "83125921"
