--- a/src/test/python/resources/config/Brands/proconsultinginvest.yml
+++ b/src/test/python/resources/config/Brands/proconsultinginvest.yml
@@ -1,6 +1,7 @@
 pretty_name: "ProConsultingInvest"
 url: "https://proconsultinginvest.ptscrm.com/"
 url_ca: "https://www.proconsultinginvest.com/#/"
+otp_secret: WDKHWAPYLM35KSCC
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
-number_live_acc: "32342"
+number_live_acc: "81870180"
