--- a/src/test/python/resources/config/Brands/tradixa.yml
+++ b/src/test/python/resources/config/Brands/tradixa.yml
@@ -3,4 +3,4 @@ url: "https://tradixa.ptscrm.com/"
 url_ca: "https://tradixa.com/"
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
-number_live_acc: "32342"
+number_live_acc: "81875137"
